# C-Collections

./: .gitignore  CMakeLists.txt  README.md  funs.c  main.c
collections/: CMakeLists.txt  array.c  d_string.c  string.c  vec.c
collections/include/collections/: array.h  d_string.h  vec.h  vec_imp.c
